# Assignment1

./: README.md
RAG_Model_Eval/: pyproject.toml
RAG_Model_Eval/AWS_S3/: LoadToDatabase.py
RAG_Model_Eval/Architecture/: streamlit_workflow_architecture
RAG_Model_Eval/Streamlit_app/: .env
RAG_Model_Eval/Streamlit_app/assignment_env/: app.py
RAG_Model_Eval/Streamlit_app/assignment_env/Views/: About_page.py  Application_page.py  Info_page.py  Main_page.py  Validation_page.py  Visualization.py
